add sponsership, full image and motive section mobile view

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <!-- Bottom Nav of Header -->
       <div class="container bottom-nav d-flex mtpb-40">
-        <p>Conact</p>
+        <p>Contact</p>
         <p>Social</p>
         <p>Address</p>
         <p>Legal Terms</p>
@@ -59,11 +59,42 @@
     </div>
   </header>
 
-  <!-- Our Sponserships -->
-  <section class="sponsers">
+  <!-- Our Sponserships Section -->
+  <section class="sponsers-section">
     <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6 col-md-2 text-center">
+          <img src="assets/icons/blooming_logo.png" alt="">
+        </div>
+        <div class="col-6 col-md-2">
+          <img src="assets/icons/buildright_logo.png" alt="">
+        </div>
+        <div class="w-100 d-md-none my-4"></div>
+        <div class="col-4 col-md-2">
+          <img src="assets/icons/flowbot_logo.png" alt="">
+        </div>
+        <div class="col-4 col-md-2">
+          <img src="assets/icons/expor_logo.png" alt="">
+        </div>
+        <div class="col-4 col-md-2">
+          <img src="assets/icons/redo_logo.png" alt="">
+        </div>
+      </div>
     </div>
   </section>
+
+  <!-- Full Image Banner and Motive -->
+  <section class="full-img-section">
+    <div class="container">
+      <img src="assets/images/Header-banner.png" class="img-fluid" alt="">
+    </div>
+
+    <!-- Motive -->
+    <div class="container text-center">
+      <h2>We escalate transfer efficiency and productivity</h2>
+    </div>
+  </section>
+
 
   <!-- JS file include -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
