add motive section and green card mobile view complete

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </section>
 
   <!-- Full Image Banner and Motive -->
-  <section class="full-img-section">
+  <section class="motive-section">
     <div class="container">
       <img src="assets/images/Header-banner.png" class="img-fluid" alt="">
     </div>
@@ -95,6 +95,56 @@
     </div>
   </section>
 
+  <!-- Company Goal Section-->
+  <section class="goal-section">
+    <div class="container text-center pb-1">
+      <h2>Get More Done In A Week</h2>
+      <p>Maximize your productivity with smarter tools designed to streamline your
+        workflow to automate tasks stay organized
+      </p>
+    </div>
+    <div class="container text-center mt-4">
+      <h2>Get More Done In A Week</h2>
+      <p>Maximize your productivity with smarter tools designed to streamline your
+        workflow to automate tasks stay organized
+      </p>
+    </div>
+
+    <div class="container">
+      <div class="row text-center m-3">
+        <div class="col-12 col-md-5 card-box mt-3">
+          <h2 class="large-nmbr">2x</h2>
+          <p>Double Your Productivity</p>
+        </div>
+        <div class="col-12 col-md-5 card-box mt-3">
+          <h2 class="large-nmbr">
+            <img src="assets/icons/graph_icon.png" alt="graph icon">
+          </h2>
+          <p>Efficiency Increase Per Transfer</p>
+        </div>
+        <div class="col-12 col-md-5 card-box mt-3">
+          <h2 class="large-nmbr">
+            <img src="assets/icons/connect_icon.png" alt="connect icon">
+          </h2>
+          <p>Centralize Your Finances</p>
+        </div>
+        <div class="col-12 col-md-5 card-box mt-3">
+          <h2 class="large-nmbr">130%</h2>
+          <p>More Activity</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Reliablity Section -->
+  <!-- <section class="reliability-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-5"></div>
+        <div class="col-12 col-md-5"></div>
+      </div>
+    </div>
+  </section> -->
 
   <!-- JS file include -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
