--- a/index.html
+++ b/index.html
@@ -137,14 +137,35 @@
   </section>
 
   <!-- Reliablity Section -->
-  <!-- <section class="reliability-section">
+  <section class="reliability-section">
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-5"></div>
-        <div class="col-12 col-md-5"></div>
+      <h2 class="text-center">The Most Reliable App</h2>
+      <div class="row mt-4">
+        <div class="col-12 col-md-5">
+          <img src="assets/images/atm_card.png" class="img-fluid" alt="atm card">
+          <h4 class="mt-3 mb-0">Scale Your Team, Not Your Card Expenses</h4>
+          <p class="mt-0">Issue virtual and physical cards at no additional cost to support
+            teams of any size.</p>
+        </div>
+        <div class="col-12 col-md-5">
+          <img src="assets/images/page_img.png" class="img-fluid" alt="page img">
+          <h4 class="mt-3 mb-0">Effortless Paper Tracking, Mobile Convenience</h4>
+          <p class="mt-0">Get precise control-at scale-with the ability to lock any card and
+            restrict any type of spend.
+          </p>
+        </div>
       </div>
     </div>
-  </section> -->
+  </section>
+
+  <!-- Full Image Banner -->
+  <section>
+    <div class="container">
+      <img src="assets/images/per.png" class="img-fluid" alt="person with fon">
+    </div>
+  </section>
+
+  
 
   <!-- JS file include -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
