add software section and download banner complete

--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
         workflow to automate tasks stay organized
       </p>
     </div>
-
     <div class="container">
       <div class="row text-center m-3">
         <div class="col-12 col-md-5 card-box mt-3">
@@ -165,8 +164,50 @@
     </div>
   </section>
 
-  
+  <!-- Company Software Section-->
+  <section class="software-section">
+    <div class="container text-center pb-1">
+      <h2>First Class Software</h2>
+      <p>Get real-time insights, seamless transactions, and advanced tools to manange
+        your wealth effortlessly.
+      </p>
+    </div>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-12 col-md-3 mt-3">
+          <img src="assets/images/wallet_icon.png" alt="">
+          <p class="mt-3">Safe Storage</p>
+        </div>
+        <div class="col-12 col-md-3 mt-3">
+          <img src="assets/images/touch_icon.png" alt="touch icon">
+          <p class="mt-3">Secure</p>
+        </div>
+        <div class="col-12 col-md-3 mt-3">
+          <img src="assets/images/grpg_dllr.png" alt="graph icon">
+          <p class="mt-3">Earn Interest</p>
+        </div>
+        <div class="col-12 col-md-3 mt-3">
+          <img src="assets/images/group_icon.png" alt="">
+          <p class="mt-3">Famiy Plan</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Download Banner Section -->
+  <section>
+    <div class="container">
+      <div class=" download-banner d-flex align-items-end">
+        <div class="download-banner-content pb-3">
+          <h3>Download Etran and manange everything from your phone.</h3>
+          <button class="lt-grn-btn" type="button">Get Started</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  </section>
   <!-- JS file include -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
