add footer section mobile view complete

--- a/index.html
+++ b/index.html
@@ -206,7 +206,25 @@
     </div>
   </section>
 
-
+  <!-- Footer Section -->
+  <section class="footer-section">
+    <div class="container">
+      <div class="row justify-content-around">
+        <div class="col-5 my-4">
+          <img src="assets/icons/Logo.png" class="img-fluid" alt="logo">
+          <img src="assets/icons/Etran.png" class="img-fluid ftr-mt140-col" alt="Etran">
+        </div>
+        <div class="col-5 ftr-contact my-4">
+          <p>Contact</p>
+          <a href="#">Hello@figma.com</a>
+          <a href="#">Instagram</a>
+          <a href="#">X</a>
+          <a href="#">LinkedIn</a>
+          <p class="mt-120 mb-0">Terms & Conditions</p>
+          <p>Privacy</p>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- JS file include -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
