fix sponserships section mobile view

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- Our Sponserships Section 1 (Mobile And Tab View) -->
   <section class="sponsers-section1">
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-between">
         <div class="col-6 col-md-2 text-center">
           <img src="assets/icons/blooming_logo.png" alt="">
         </div>
@@ -70,13 +70,13 @@
           <img src="assets/icons/buildright_logo.png" alt="">
         </div>
         <div class="w-100 d-md-none my-4"></div>
-        <div class="col-4 col-md-2">
+        <div class="col-3 col-md-2">
           <img src="assets/icons/flowbot_logo.png" alt="">
         </div>
-        <div class="col-4 col-md-2">
+        <div class="col-3 col-md-2">
           <img src="assets/icons/expor_logo.png" alt="">
         </div>
-        <div class="col-4 col-md-2">
+        <div class="col-3 col-md-2">
           <img src="assets/icons/redo_logo.png" alt="">
         </div>
       </div>
@@ -99,20 +99,20 @@
   <section class="sponsers-section2">
     <div class="container">
       <div class="row justify-content-between">
-        <div class="col-6 col-md-2 text-center">
+        <div class="col-6 col-md-2">
           <img src="assets/icons/blooming_logo.png" alt="">
         </div>
         <div class="col-6 col-md-2">
           <img src="assets/icons/buildright_logo.png" alt="">
         </div>
         <div class="w-100 d-md-none my-4"></div>
-        <div class="col-4 col-md-2">
+        <div class="col-3 col-md-2">
           <img src="assets/icons/flowbot_logo.png" alt="">
         </div>
-        <div class="col-4 col-md-2">
+        <div class="col-3 col-md-2">
           <img src="assets/icons/expor_logo.png" alt="">
         </div>
-        <div class="col-4 col-md-2">
+        <div class="col-3 col-md-2">
           <img src="assets/icons/redo_logo.png" alt="">
         </div>
       </div>
