enhancement layout with Arif's help.

--- a/index.html
+++ b/index.html
@@ -12,249 +12,258 @@
 </head>
 
 <body>
-  <header>
-    <!-- Nav-Bar -->
-    <div class="container">
-      <nav class="navbar navbar-dark">
-        <div class="container d-flex mt-2">
-          <a href="#">
-            <img src="assets/icons/etran_logo.png" class="logo mb-2" alt="">
-          </a>
-          <button class="lt-grn-btn" type="button">Get Started</button>
-        </div>
-      </nav>
+  <div class="row">
+    <!-- side -->
+    <div class="col-lg-4 right-side">
+      <header>
+        <!-- Nav-Bar -->
+        <div class="container section">
+          <nav class="navbar navbar-dark">
+            <div class="container d-flex mt-2">
+              <a href="#">
+                <img src="assets/icons/etran_logo.png" class="logo mb-2" alt="">
+              </a>
+              <button class="lt-grn-btn" type="button">Get Started</button>
+            </div>
+          </nav>
 
-      <!-- Main Heading Area -->
-      <div class="container main-heading mtpb-40">
-        <h1 class="">Money Transfers Made <span class="lt-gr-text">Simple</span></h1>
-        <h2 class="mt-3">No personal credit checks or founder guarantee.</h2>
-      </div>
-
-      <!-- Our Services Banner -->
-      <div class="container services-banner d-flex">
-        <div class="row justify-content-between">
-          <h3 class="mb-3">Our offerings</h3>
-          <div class="col-3 services-box">
-            <img src="assets/icons/productivity_icon.png" class="mt-4 img-fluid" alt="charge icon">
-            <p class="my-2">Instant Productivity</p>
+          <!-- Main Heading Area -->
+          <div class="container main-heading mtpb-40">
+            <h1 class="">Money Transfers Made <span class="lt-gr-text">Simple</span></h1>
+            <h2 class="mt-3">No personal credit checks or founder guarantee.</h2>
           </div>
-          <div class="col-3 services-box">
-            <img src="assets/icons/globe_icon.png" class="mt-4 img-fluid" alt="charge icon">
-            <p class="my-2">Expense Management</p>
+
+          <!-- Our Services Banner -->
+          <div class="container services-banner d-flex">
+            <div class="row justify-content-between">
+              <h3 class="mb-3">Our offerings</h3>
+              <div class="col-3 services-box">
+                <img src="assets/icons/productivity_icon.png" class="mt-4 img-fluid" alt="charge icon">
+                <p class="my-2">Instant Productivity</p>
+              </div>
+              <div class="col-3 services-box">
+                <img src="assets/icons/globe_icon.png" class="mt-4 img-fluid" alt="charge icon">
+                <p class="my-2">Expense Management</p>
+              </div>
+              <div class="col-3 services-box">
+                <img src="assets/icons/secure_icon.png" class="mt-4 img-fluid" alt="charge icon">
+                <p class="my-2">Advanced Technology</p>
+              </div>
+            </div>
           </div>
-          <div class="col-3 services-box">
-            <img src="assets/icons/secure_icon.png" class="mt-4 img-fluid" alt="charge icon">
-            <p class="my-2">Advanced Technology</p>
+
+          <!-- Bottom Nav of Header -->
+          <div class="container bottom-nav d-flex mtpb-40">
+            <p>Contact</p>
+            <p>Social</p>
+            <p>Address</p>
+            <p>Legal Terms</p>
           </div>
         </div>
-      </div>
-
-      <!-- Bottom Nav of Header -->
-      <div class="container bottom-nav d-flex mtpb-40">
-        <p>Contact</p>
-        <p>Social</p>
-        <p>Address</p>
-        <p>Legal Terms</p>
-      </div>
-    </div>
-  </header>
-
-  <!-- Our Sponserships Section 1 (Mobile And Tab View) -->
-  <section class="sponsers-section1">
-    <div class="container">
-      <div class="row justify-content-between">
-        <div class="col-6 col-md-2 text-center">
-          <img src="assets/icons/blooming_logo.png" alt="">
-        </div>
-        <div class="col-6 col-md-2">
-          <img src="assets/icons/buildright_logo.png" alt="">
-        </div>
-        <div class="w-100 d-md-none my-4"></div>
-        <div class="col-3 col-md-2">
-          <img src="assets/icons/flowbot_logo.png" alt="">
-        </div>
-        <div class="col-3 col-md-2">
-          <img src="assets/icons/expor_logo.png" alt="">
-        </div>
-        <div class="col-3 col-md-2">
-          <img src="assets/icons/redo_logo.png" alt="">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Full Image Banner and Motive -->
-  <section>
-    <div class="container full-img-section">
-      <img src="assets/images/Header-banner.png" class="img-fluid" alt="">
+      </header>
     </div>
 
-    <!-- Motive -->
-    <div class="container motive-section text-center">
-      <h2>We escalate transfer efficiency and productivity</h2>
-    </div>
-  </section>
+    <!-- main -->
+    <div class="col-lg-8">
 
-  <!-- Our Sponserships Section 2 (Desktop View) -->
-  <section class="sponsers-section2">
-    <div class="container">
-      <div class="row justify-content-between">
-        <div class="col-6 col-md-2">
-          <img src="assets/icons/blooming_logo.png" alt="">
+      <!-- Our Sponserships Section 1 (Mobile And Tab View) -->
+      <section class="sponsers-section1">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-6 col-md-2 text-center">
+              <img src="assets/icons/blooming_logo.png" alt="">
+            </div>
+            <div class="col-6 col-md-2">
+              <img src="assets/icons/buildright_logo.png" alt="">
+            </div>
+            <div class="w-100 d-md-none my-4"></div>
+            <div class="col-3 col-md-2">
+              <img src="assets/icons/flowbot_logo.png" alt="">
+            </div>
+            <div class="col-3 col-md-2">
+              <img src="assets/icons/expor_logo.png" alt="">
+            </div>
+            <div class="col-3 col-md-2">
+              <img src="assets/icons/redo_logo.png" alt="">
+            </div>
+          </div>
         </div>
-        <div class="col-6 col-md-2">
-          <img src="assets/icons/buildright_logo.png" alt="">
-        </div>
-        <div class="w-100 d-md-none my-4"></div>
-        <div class="col-3 col-md-2">
-          <img src="assets/icons/flowbot_logo.png" alt="">
-        </div>
-        <div class="col-3 col-md-2">
-          <img src="assets/icons/expor_logo.png" alt="">
-        </div>
-        <div class="col-3 col-md-2">
-          <img src="assets/icons/redo_logo.png" alt="">
-        </div>
-      </div>
-    </div>
-  </section>
+      </section>
 
-  <!-- Company Goal Section-->
-  <section class="goal-section">
-    <div class="container goal-text text-center pb-1">
-      <h2>Get More Done In A Week</h2>
-      <p>Maximize your productivity with smarter tools designed to streamline your
-        workflow to automate tasks stay organized
-      </p>
-    </div>
-    <div class="container goal-text text-center mt-4">
-      <h2>Get More Done In A Week</h2>
-      <p>Maximize your productivity with smarter tools designed to streamline your
-        workflow to automate tasks stay organized
-      </p>
-    </div>
-    <div class="container p-0">
-      <div class="row card-row text-center">
-        <div class="col-12 col-md-5 card-box mt-3">
-          <h2 class="large-nmbr">2x</h2>
-          <p>Double Your Productivity</p>
+      <!-- Full Image Banner and Motive -->
+      <section>
+        <div class="container full-img-section">
+          <img src="assets/images/Header-banner.png" class="img-fluid" alt="">
         </div>
-        <div class="col-12 col-md-5 card-box mt-3">
-          <h2 class="large-nmbr">
-            <img src="assets/icons/graph_icon.png" alt="graph icon">
-          </h2>
-          <p>Efficiency Increase Per Transfer</p>
-        </div>
-        <div class="col-12 col-md-5 card-box mt-3">
-          <h2 class="large-nmbr">
-            <img src="assets/icons/connect_icon.png" alt="connect icon">
-          </h2>
-          <p>Centralize Your Finances</p>
-        </div>
-        <div class="col-12 col-md-5 card-box mt-3">
-          <h2 class="large-nmbr">130%</h2>
-          <p>More Activity</p>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <!-- Reliablity Section -->
-  <section class="reliability-section">
-    <div class="container">
-      <h2 class="text-center">The Most Reliable App</h2>
-      <div class="row reliability-row mt-4">
-        <div class="col-12 col-md-6">
-          <img src="assets/images/atm_card.png" class="img-fluid w-100" alt="atm card">
-          <h4 class="mt-3 mb-0">Scale Your Team, Not Your Card Expenses</h4>
-          <p class="mt-0">Issue virtual and physical cards at no additional cost to support
-            teams of any size.</p>
+        <!-- Motive -->
+        <div class="container motive-section text-center">
+          <h2>We escalate transfer efficiency and productivity</h2>
         </div>
-        <div class="col-12 col-md-6">
-          <img src="assets/images/page_img.png" class="img-fluid w-100" alt="page img">
-          <h4 class="mt-3 mb-0">Effortless Paper Tracking, Mobile Convenience</h4>
-          <p class="mt-0">Get precise control-at scale-with the ability to lock any card and
-            restrict any type of spend.
+      </section>
+
+      <!-- Our Sponserships Section 2 (Desktop View) -->
+      <section class="sponsers-section2">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-6 col-md-2">
+              <img src="assets/icons/blooming_logo.png" alt="">
+            </div>
+            <div class="col-6 col-md-2">
+              <img src="assets/icons/buildright_logo.png" alt="">
+            </div>
+            <div class="w-100 d-md-none my-4"></div>
+            <div class="col-3 col-md-2">
+              <img src="assets/icons/flowbot_logo.png" alt="">
+            </div>
+            <div class="col-3 col-md-2">
+              <img src="assets/icons/expor_logo.png" alt="">
+            </div>
+            <div class="col-3 col-md-2">
+              <img src="assets/icons/redo_logo.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Company Goal Section-->
+      <section class="goal-section">
+        <div class="container goal-text text-center pb-1">
+          <h2>Get More Done In A Week</h2>
+          <p>Maximize your productivity with smarter tools designed to streamline your
+            workflow to automate tasks stay organized
           </p>
         </div>
-      </div>
-    </div>
-  </section>
+        <div class="container goal-text text-center mt-4">
+          <h2>Get More Done In A Week</h2>
+          <p>Maximize your productivity with smarter tools designed to streamline your
+            workflow to automate tasks stay organized
+          </p>
+        </div>
+        <div class="container p-0">
+          <div class="row card-row text-center">
+            <div class="col-12 col-md-5 card-box mt-3">
+              <h2 class="large-nmbr">2x</h2>
+              <p>Double Your Productivity</p>
+            </div>
+            <div class="col-12 col-md-5 card-box mt-3">
+              <h2 class="large-nmbr">
+                <img src="assets/icons/graph_icon.png" alt="graph icon">
+              </h2>
+              <p>Efficiency Increase Per Transfer</p>
+            </div>
+            <div class="col-12 col-md-5 card-box mt-3">
+              <h2 class="large-nmbr">
+                <img src="assets/icons/connect_icon.png" alt="connect icon">
+              </h2>
+              <p>Centralize Your Finances</p>
+            </div>
+            <div class="col-12 col-md-5 card-box mt-3">
+              <h2 class="large-nmbr">130%</h2>
+              <p>More Activity</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  <!-- Full Image Banner -->
-  <section>
-    <div class="container  person-banner1">
-      <img src="assets/images/per.png" class="img-fluid w-100" alt="person with fon">
-    </div>
-  </section>
-  <section>
-    <div class="container  person-banner2">
-      <img src="assets/images/person_banner.png" class="img-fluid" alt="person with fon">
-    </div>
-  </section>
+      <!-- Reliablity Section -->
+      <section class="reliability-section">
+        <div class="container">
+          <h2 class="text-center">The Most Reliable App</h2>
+          <div class="row reliability-row mt-4">
+            <div class="col-12 col-md-6">
+              <img src="assets/images/atm_card.png" class="img-fluid w-100" alt="atm card">
+              <h4 class="mt-3 mb-0">Scale Your Team, Not Your Card Expenses</h4>
+              <p class="mt-0">Issue virtual and physical cards at no additional cost to support
+                teams of any size.</p>
+            </div>
+            <div class="col-12 col-md-6">
+              <img src="assets/images/page_img.png" class="img-fluid w-100" alt="page img">
+              <h4 class="mt-3 mb-0">Effortless Paper Tracking, Mobile Convenience</h4>
+              <p class="mt-0">Get precise control-at scale-with the ability to lock any card and
+                restrict any type of spend.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  <!-- Company Software Section-->
-  <section class="software-section">
-    <div class="container text-center pb-1">
-      <h2>First Class Software</h2>
-      <p>Get real-time insights, seamless transactions, and advanced tools to manange
-        your wealth effortlessly.
-      </p>
-    </div>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-12 col-md-3 mt-3">
-          <img src="assets/images/wallet_icon.png" alt="">
-          <p class="mt-3">Safe Storage</p>
+      <!-- Full Image Banner -->
+      <section>
+        <div class="container  person-banner1">
+          <img src="assets/images/per.png" class="img-fluid w-100" alt="person with fon">
         </div>
-        <div class="col-12 col-md-3 mt-3">
-          <img src="assets/images/touch_icon.png" alt="touch icon">
-          <p class="mt-3">Secure</p>
+      </section>
+      <section>
+        <div class="container  person-banner2">
+          <img src="assets/images/person_banner.png" class="img-fluid" alt="person with fon">
         </div>
-        <div class="col-12 col-md-3 mt-3">
-          <img src="assets/images/grpg_dllr.png" alt="graph icon">
-          <p class="mt-3">Earn Interest</p>
-        </div>
-        <div class="col-12 col-md-3 mt-3">
-          <img src="assets/images/group_icon.png" alt="">
-          <p class="mt-3">Famiy Plan</p>
-        </div>
-      </div>
-    </div>
-  </section>
+      </section>
 
-  <!-- Download Banner Section -->
-  <section>
-    <div class="container">
-      <div class=" download-banner d-flex align-items-end">
-        <div class="download-banner-content pb-3">
-          <h3>Download Etran and manange everything from your phone.</h3>
-          <button class="lt-grn-btn" type="button">Get Started</button>
+      <!-- Company Software Section-->
+      <section class="software-section">
+        <div class="container text-center pb-1">
+          <h2>First Class Software</h2>
+          <p>Get real-time insights, seamless transactions, and advanced tools to manange
+            your wealth effortlessly.
+          </p>
         </div>
-      </div>
-    </div>
-  </section>
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-12 col-md-3 mt-3">
+              <img src="assets/images/wallet_icon.png" alt="">
+              <p class="mt-3">Safe Storage</p>
+            </div>
+            <div class="col-12 col-md-3 mt-3">
+              <img src="assets/images/touch_icon.png" alt="touch icon">
+              <p class="mt-3">Secure</p>
+            </div>
+            <div class="col-12 col-md-3 mt-3">
+              <img src="assets/images/grpg_dllr.png" alt="graph icon">
+              <p class="mt-3">Earn Interest</p>
+            </div>
+            <div class="col-12 col-md-3 mt-3">
+              <img src="assets/images/group_icon.png" alt="">
+              <p class="mt-3">Famiy Plan</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  <!-- Footer Section -->
-  <section class="footer-section">
-    <div class="container">
-      <div class="row justify-content-between">
-        <div class="col-5 my-4">
-          <img src="assets/icons/Logo.png" class="img-fluid" alt="logo">
-          <img src="assets/icons/Etran.png" class="img-fluid mt-140" alt="Etran">
+      <!-- Download Banner Section -->
+      <section>
+        <div class="container">
+          <div class=" download-banner d-flex align-items-end">
+            <div class="download-banner-content pb-3">
+              <h3>Download Etran and manange everything from your phone.</h3>
+              <button class="lt-grn-btn" type="button">Get Started</button>
+            </div>
+          </div>
         </div>
-        <div class="col-5 ftr-contact my-4">
-          <p>Contact</p>
-          <a href="#">Hello@figma.com</a>
-          <a href="#">Instagram</a>
-          <a href="#">X</a>
-          <a href="#">LinkedIn</a>
-          <p class="mt-120 mb-0">Terms & Conditions</p>
-          <p>Privacy</p>
+      </section>
+
+      <!-- Footer Section -->
+      <section class="footer-section">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-5 my-4">
+              <img src="assets/icons/Logo.png" class="img-fluid" alt="logo">
+              <img src="assets/icons/Etran.png" class="img-fluid mt-140" alt="Etran">
+            </div>
+            <div class="col-5 ftr-contact my-4">
+              <p>Contact</p>
+              <a href="#">Hello@figma.com</a>
+              <a href="#">Instagram</a>
+              <a href="#">X</a>
+              <a href="#">LinkedIn</a>
+              <p class="mt-120 mb-0">Terms & Conditions</p>
+              <p>Privacy</p>
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
     </div>
-  </section>
+  </div>
   <!-- JS file include -->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
