banner - remove uncessary width.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <!-- Main Heading Area -->
           <div class="container main-heading mtpb-40">
-            <h1 class="">Money Transfers Made <span class="lt-gr-text">Simple</span></h1>
+            <h1 class="">Money Transfers <br> Made <span class="lt-gr-text">Simple</span></h1>
             <h2 class="mt-3">No personal credit checks or founder guarantee.</h2>
           </div>
 
