add hover effect on button and box effect

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div class="row">
     <!-- side -->
     <div class="col-lg-4 right-side">
-      <header>
+      <header">
         <!-- Nav-Bar -->
-        <div class="container section">
+        <div class="container header-section">
           <nav class="navbar navbar-dark">
             <div class="container d-flex mt-2">
               <a href="#">
@@ -211,7 +211,7 @@
         <div class="container">
           <div class="row text-center">
             <div class="col-12 col-md-3 mt-3">
-              <img src="assets/images/wallet_icon.png" alt="">
+              <img src="assets/images/wallet_icon.png" alt="wallet icon">
               <p class="mt-3">Safe Storage</p>
             </div>
             <div class="col-12 col-md-3 mt-3">
