fix remove unnecessary spaces

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="row">
     <!-- side -->
     <div class="col-lg-4 right-side">
-      <header">
+      <header>
         <!-- Nav-Bar -->
         <div class="container header-section">
           <nav class="navbar navbar-dark">
