fix - generic margin and padding classes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
 
           <!-- Bottom Nav of Header -->
-          <div class="container bottom-nav d-flex mtpb-40">
+          <div class="container bottom-nav d-flex mt-40 pb-40">
             <p>Contact</p>
             <p>Social</p>
             <p>Address</p>
